# stm32

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  set-ina232-overcurrent.ps1  stm32.code-workspace
.github/workflows/: blinky-build.yml
Logic2_STS40/: HighLevelAnalyzer.py  README.md  extension.json  plot_temperature.py  requirements.txt  sts40_data.csv
STM32F411CE_Blinky/: README.md  platformio.ini
STM32F411CE_Blinky/include/: app_blinky.h  board_config.h  console_config.h  driver_config.h  error_config.h  project_config.h  sts40_driver_config.h  usb_console_port.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
STM32F411CE_Blinky/lib/board/include/: board.h
STM32F411CE_Blinky/lib/board/src/: board.c
STM32F411CE_Blinky/lib/console/include/: console.h
STM32F411CE_Blinky/lib/console/src/: console.c
STM32F411CE_Blinky/lib/drivers_led/include/: led_driver.h
STM32F411CE_Blinky/lib/drivers_led/src/: led_driver.c
STM32F411CE_Blinky/lib/drivers_sts40/include/: sts40_driver.h
STM32F411CE_Blinky/lib/drivers_sts40/src/: sts40_driver.c
STM32F411CE_Blinky/scripts/: dfu_upload.sh
STM32F411CE_Blinky/src/: app_blinky.c  main.c  stm32f4xx_it.c  usb_console_port.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
STM32F411CE_Blinky/tools/: launch_console.ps1  launch_console.sh  stm32_console.py
app/: CMakeLists.txt  app_blinky.c  app_blinky.h  app_freertos.c  app_freertos.h
artifacts/: console-interface-research.md
boards/blackpill_f411ce/: CMakeLists.txt
boards/blackpill_f411ce/include/: board.h  stm32f4xx_hal_conf.h
boards/blackpill_f411ce/src/: board.c
boards/stm32l0_discovery/: CMakeLists.txt
boards/stm32l0_discovery/include/: board.h  stm32l0xx_hal_conf.h
boards/stm32l0_discovery/src/: board.c
cmake/: arm-none-eabi.cmake
console/: CMakeLists.txt
console/include/console/: console.h
console/src/: console.c
documentation/: HT_DS_Datasheet_STS4x.txt
drivers/: CMakeLists.txt
drivers/ads7822/: ads7822_driver.c  ads7822_driver.h
drivers/ina232/: ina232_driver.c  ina232_driver.h
drivers/ina232a/: ina232a_driver.c  ina232a_driver.h
drivers/led/: led_driver.c  led_driver.h
linker/: stm32f411.ld  stm32l052.ld
middleware/: CMakeLists.txt
middleware/include/middleware/: rtos_kernel.h
middleware/rtos/: rtos_kernel.c
osal/: CMakeLists.txt
osal/include/osal/: delay.h  task.h
osal/src/baremetal/: osal_delay_baremetal.c  osal_task_baremetal.c
osal/src/freertos/: osal_delay_freertos.c  osal_task_freertos.c
platform/: CMakeLists.txt
platform/include/platform/: clock.h  gpio.h  i2c.h  spi.h  uart.h  usb_cdc.h  usb_composite.h
platform/src/stm32f4/common/: platform_init.c
platform/src/stm32f4/composite/: platform_usb_composite.c  usbd_conf_composite.c
platform/src/stm32f4/hal/: platform_clock.c  platform_gpio.c  platform_i2c.c  platform_spi.c  platform_uart.c  platform_usb_cdc.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
platform/src/stm32l0/common/: platform_init.c
platform/src/stm32l0/composite/: platform_usb_composite.c  usbd_conf_l0.c
platform/src/stm32l0/hal/: platform_clock.c  platform_gpio.c  platform_i2c.c  platform_uart.c
platform/src/usb_composite/: usbd_cdc_hid_desc.c  usbd_cdc_hid_desc.h  usbd_cdc_if_composite.c  usbd_composite.c  usbd_composite.h  usbd_hid_kbd.c  usbd_hid_kbd.h
projects/blackpill_f411ce_blinky/: CMakeLists.txt  FreeRTOSConfig.h  main.c  stm32f4xx_it.c
projects/blackpill_f411ce_composite/: CMakeLists.txt  main.c  stm32f4xx_it.c
projects/stm32l0_composite/: CMakeLists.txt  main.c  stm32l0xx_it.c
projects/stm32l0_discovery_blinky/: CMakeLists.txt  main.c  stm32l0xx_it.c
rtos/: CMakeLists.txt
rtos/freertos/: FreeRTOSConfig.h  freertos_hooks.c
scripts/: monitor_adc.ps1
services/: CMakeLists.txt  ads7822_service.c  ads7822_service.h  ina232_service.c  ina232_service.h  led_service.c  led_service.h
startup/: README.md
tests/: README.md
